# takoc-model

./: .gitignore  README.md  main.py  main.ts  namespaces.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.trae/rules/: project_rules.md
doc/api/: api-v1.md
doc/store/: local-git.md
doc/typesystem/: json-schema.md
legacy/: core.ts  parser.ts
lib/: checker.ts  constructor.ts  core.ts  file.ts  generator.ts  parser.ts
src/api/: error.py  v1.py  v1.yaml  v1_app.py
src/local_git/: db.py  file_io.py  global_config.py  main.py  metadata.py  namespace.py  namespaces.py  table.py  test_db.py  test_file_io.py  test_metadata.py  test_namespaces.py  test_table.py
string/: string.ts
typesystem/: Module.md  Type Constraint.md  Type.md  builtin.ts  typesystem.ts
